gamesessions managed by username